--- a/Learning/05_Matplotlib.ipynb
+++ b/Learning/05_Matplotlib.ipynb
@@ -9,28 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "cars = pd.read_csv(\"mtcars.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x28f01ef1390>]"
+       "[<matplotlib.lines.Line2D at 0x28f0a44a440>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -57,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x28f01f570a0>]"
+       "[<matplotlib.lines.Line2D at 0x28f0a4e8280>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -106,10 +108,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28f01fabd00>"
+       "<matplotlib.legend.Legend at 0x28f0b63eb30>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -139,16 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.collections.PolyCollection at 0x28f0880c2e0>]"
+       "[<matplotlib.collections.PolyCollection at 0x28f0b692830>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -177,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.collections.PolyCollection at 0x28f080e1a20>]"
+       "[<matplotlib.collections.PolyCollection at 0x28f036f9e40>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
        "<BarContainer object of 32 artists>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +267,7 @@
        "<BarContainer object of 32 artists>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
